2022-11-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph.def:
	  Fix iy handling in peephole optimizer, variant of patch #441 by Job Bolle.

2022-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* support/cpp/gcc/config/riscv/arch-canonicalize:
	  Add missing file from GCC CPP.

2022-10-25 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc:
	  Fix argument type in dummy, #3492.

2022-10-21 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix a typo noticed by Basil Hussain, that makes an aspect of the stm8 calling convention, version 0, ambiguous.

2022-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Relax type match requirements on literal operands to multiplication support functions.

2022-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc.c,
	  src/stm8/gen.c,
	  src/stm8/ralloc.c:
	  Small improvements in reads of bool bit-fields.

2022-10-07 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc:
	  Add two more dummies.

2022-10-03 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/gcc_attr.h:
	  Use C23 version macro.

2022-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/MakeList:
	  Disable a test for pdk14 that fails due to lack of memory on the target device.

2022-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Use mov in more cases, patch by Basil Hussain.
	* device/include/assert.h:
	  Fix static_assert for C11.

2022-09-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCmain.c,
	  support/cpp/libcpp/init.cc:
	  Fix handling of c2x standard for preprocessor.
	* device/include/stdlib.h,
	  device/lib/Makefile.in,
	  device/lib/__stdc_count_leading_zeros.c,
	  device/lib/__stdc_first_leading_one.c,
	  device/lib/__stdc_first_trailing_oneull.c,
	  device/lib/_divslonglong.c,
	  device/lib/_divulonglong.c,
	  device/lib/_modslonglong.c,